--- a/data/cards/05611760.yaml
+++ b/data/cards/05611760.yaml
@@ -2,11 +2,11 @@ konami_id: 17249
 password: 5611760
 name:
   en: Rainbow Bridge of Salvation
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Regenbogenbrücke der Erlösung
+  es: Puente de Arco Iris de la Salvación
+  fr: Pont Arc-en-Ciel du Salut
+  it: Ponte Arcobaleno della Salvezza
+  pt: Ponte Arco-Íris da Salvação
   ja: <ruby>救<rt>すく</rt></ruby>いの<ruby>架<rt>か</rt></ruby>け<ruby>橋<rt>はし</rt></ruby>
   ja_romaji: Sukui no Kakehashi
   ko: 구원의 가교
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     If there are 2 or more different Monster Types among the Level 10 or higher monsters on the field: Shuffle all cards except this one from both players' hands, fields, and GYs into the Deck, then each player draws 5 cards. You can banish this card from your GY; add 1 "Crystal Beast" monster and 1 Field Spell from your Deck to your hand. You can only apply each effect of "Rainbow Bridge of Salvation" once per Duel.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Falls es unter den Monstern der Stufe 10 oder höher auf dem Spielfeld 2 oder mehr unterschiedliche Monstertypen gibt: Mische alle Karten, außer dieser, von den Händen, Spielfeldseiten und Friedhöfen beider Spieler ins Deck, dann zieht jeder Spieler 5 Karten. Du kannst diese Karte von deinem Friedhof verbannen; füge deiner Hand 1 „Kristallungeheuer“-Monster und 1 Spielfeldzauber von deinem Deck hinzu. Du kannst jeden Effekt von „Regenbogenbrücke der Erlösung“ nur einmal pro Duell anwenden.
+  es: |-
+    Si hay 2 o más Tipos de Monstruo diferentes entre los monstruos de Nivel 10 o mayor en el Campo: baraja al Deck todas las cartas en las manos, Campos y Cementerios de ambos jugadores, excepto ésta, y después cada jugador roba 5 cartas. Puedes desterrar esta carta en tu Cementerio; añade a tu mano 1 monstruo "Bestia de Cristal" y 1 Mágica de Campo en tu Deck. Sólo puedes aplicar cada efecto de "Puente de Arco Iris de la Salvación" una vez por Duelo.
+  fr: |-
+    S'il y a min. 2 Types de Monstre différents parmi les monstres de min. Niveau 10 sur le Terrain : mélangez toutes les cartes (celle-ci exclue) depuis la main, Terrain et Cimetière de chaque joueur dans le Deck, puis chaque joueur pioche 5 cartes. Vous pouvez bannir cette carte depuis votre Cimetière ; ajoutez 1 monstre "Bête Cristalline" et 1 Magie de Terrain depuis votre Deck à votre main. Vous ne pouvez appliquer chaque effet de "Pont Arc-en-Ciel du Salut" qu'une fois par Duel.
+  it: |-
+    Se ci sono 2 o più Tipi di Mostro diversi tra i mostri di Livello 10 o superiore sul Terreno: mischia nel Deck tutte le carte eccetto questa dalle mani, Terreni e Cimiteri di entrambi i giocatori, poi ogni giocatore pesca 5 carte. Puoi bandire questa carta dal tuo Cimitero; aggiungi 1 mostro "Bestia Cristallo" e 1 Magia Terreno dal tuo Deck alla tua mano. Puoi applicare ogni effetto di "Ponte Arcobaleno della Salvezza" una sola volta per Duello.
+  pt: |-
+    Se houver 2 ou mais Tipos de Monstro diferentes dentre os monstros de Nível 10 ou mais no campo: embaralhe no Deck todos os cards, exceto este, das mãos, dos campos e dos Cemitérios dos dois duelistas e, depois, cada duelista compra 5 cards. Você pode banir este card do seu Cemitério; adicione 1 monstro "Fera Cristalina" e 1 Magia de Campo do seu Deck à sua mão. Você só pode aplicar cada efeito de "Ponte Arco-Íris da Salvação" uma vez por Duelo.
   ja: |-
     このカード名の①②の効果はそれぞれデュエル中に１度しか適用できない。①：フィールドのレベル１０以上のモンスターの種族が２種類以上の場合に発動できる。このカード以外のお互いの手札・フィールド・墓地のカードを全て持ち主のデッキに戻す。その後、お互いにデッキから５枚ドローする。②：墓地のこのカードを除外して発動できる。デッキから「宝玉獣」モンスター１体とフィールド魔法カード１枚を手札に加える。
   ko: |-
