--- a/data/cards/43940008.yaml
+++ b/data/cards/43940008.yaml
@@ -2,11 +2,11 @@ konami_id: 17244
 password: 43940008
 name:
   en: Duel Tower
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Duellturm
+  es: Torre de Duelos
+  fr: Tour des Duels
+  it: Torre dei Duelli
+  pt: Torre de Duelo
   ja: <ruby>決闘塔<rt>デュエル・タワー</rt></ruby>アルカトラズ
   ja_romaji: Dyueru Tawā Arukatorazu
   ko: 듀얼 타워 알카트라즈
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     At the start of each Battle Phase: Each player can reveal 1 monster from their Deck that does not have ? ATK, you banish them face-down, then the player who revealed the monster with the highest ATK (each player, if tied) can Special Summon 1 monster from their hand, and it can attack directly while on the field. Once per turn, during the End Phase: You can activate this effect; if you control this card during the End Phase of your next turn, destroy all cards on the field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Am Beginn jeder Battle Phase: Jeder Spieler kann 1 Monster von seinem Deck vorzeigen, das nicht ? ATK hat, du verbannst sie verdeckt, dann kann der Spieler, der das Monster mit den höchsten ATK vorgezeigt hat, (bei Gleichstand jeder Spieler) 1 Monster als Spezialbeschwörung von seiner Hand beschwören und es kann direkt angreifen, solange es auf dem Spielfeld liegt. Einmal pro Spielzug, während der End Phase: Du kannst diesen Effekt aktivieren; falls du diese Karte während der End Phase deines nächsten Spielzugs kontrollierst, zerstöre alle Karten auf dem Spielfeld.
+  es: |-
+    Al comienzo de cada Battle Phase: cada jugador puede mostrar 1 monstruo en su Deck que no tenga ? ATK, tú los destierras boca abajo, y después el jugador que mostró el monstruo con el ATK más alto (cada jugador, si hay empate) puede Invocar 1 monstruo de Modo Especial, desde su mano, y éste puede atacar directamente mientras esté en el Campo. Una vez por turno, durante la End Phase: puedes activar este efecto; si controlas esta carta durante la End Phase de tu próximo turno, destruye todas las cartas en el Campo.
+  fr: |-
+    Au début de chaque Battle Phase : chaque joueur peut révéler 1 monstre depuis son Deck qui n'a pas ? ATK, vous les bannissez face verso, puis le joueur qui a révélé le monstre avec la plus haute ATK (chaque joueur en cas d'égalité) peut Invoquer Spécialement 1 monstre depuis sa main, et celui-ci peut attaquer directement tant qu'il est sur le Terrain. Une fois par tour, durant la End Phase : vous pouvez activer cet effet ; si vous contrôlez cette carte durant la End Phase de votre prochain tour, détruisez toutes les cartes sur le Terrain.
+  it: |-
+    All'inizio di ogni Battle Phase: ogni giocatore può rivelare dal suo Deck 1 mostro che non ha ATK ?, tu li bandisci coperti, poi il giocatore che ha rivelato il mostro con l'ATK più alto (in caso di parità, ogni giocatore) può Evocare Specialmente 1 mostro dalla sua mano, ed esso può attaccare direttamente mentre è sul Terreno. Una volta per turno, durante la End Phase: puoi attivare questo effetto; se controlli questa carta durante la End Phase del tuo prossimo turno, distruggi tutte le carte sul Terreno.
+  pt: |-
+    No começo de cada Fase de Batalha: cada duelista pode revelar 1 monstro do Deck dele que não tenha ATK ?, você os bane com a face para baixo e, depois, o duelista que revelou o monstro com o maior ATK (em caso de empate, os dois duelistas) pode Invocar por Invocação-Especial 1 monstro da mão dele, e ele pode atacar diretamente enquanto estiver no campo. Uma vez por turno, durante a Fase Final: você pode ativar este efeito; se você controlar este card durante a Fase Final do seu próximo turno, destrua todos os cards no campo.
   ja: |-
     ①：自分・相手のバトルフェイズ開始時に発動する。お互いはそれぞれ自身のデッキから攻撃力？以外のモンスター１体を選ぶ事ができる。選んだモンスターをお互いに確認し、裏側表示で除外する。攻撃力が一番高いモンスターを選んだプレイヤーは手札からモンスター１体を特殊召喚できる。この効果で特殊召喚したモンスターは直接攻撃できる。②：自分・相手のエンドフェイズに発動できる。次の自分ターンのエンドフェイズにこのカードがフィールドに存在する場合、フィールドのカードを全て破壊する。
   ko: |-
