--- a/data/cards/90238142.yaml
+++ b/data/cards/90238142.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 채널러
   ko_rr: Haepi Chaeneolleo
   zh-TW: 神鷹通靈師
-  zh-CN: 鹰身通灵师
+  zh-CN: 神鹰通灵者
 text:
   en: |-
     You can discard 1 "Harpie" card; Special Summon 1 "Harpie" monster from your Deck in Defense Position, except "Harpie Channeler". You can only use this effect of "Harpie Channeler" once per turn. While you control a Dragon monster, this card's Level becomes 7. This card's name becomes "Harpie Lady" while on the field or in the GY.
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     可从手牌舍弃1张冠有「神鷹」之名的卡牌并发动。从牌组以表侧守备表示特殊召唤1只除「神鷹通靈師」以外的冠有「神鷹」之名的怪兽。「神鷹通靈師」的此效果1回合只可使用1次。此外，我方场上存在龙族怪兽的场合，此卡的等级变为7。只要存在于场上、墓地，此卡的卡牌名被视为 「神鷹女郎」。
   zh-CN: |-
-    这个卡名的③的效果1回合只能使用1次。①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。②：自己场上有龙族怪兽存在的场合，这张卡的等级变成7星。③：从手卡丢弃1张「鹰身」卡才能发动。从卡组把「鹰身通灵师」以外的1只「鹰身」怪兽守备表示特殊召唤。
+    此卡名的③效果1回合仅可使用1次。①：此卡只要存在于场上・墓地，卡名视为"神鹰女郎"。②：自己场上有龙族怪兽存在的情况下，此卡的等级变为7。③：从手牌将1张"神鹰"卡舍弃可以发动。从牌组将"神鹰通灵者"以外的1只"神鹰"怪兽以守备表示特殊召唤。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -156,4 +156,9 @@ sets:
     set_name: Lord of the Tachyon Galaxy
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DP21-SC008
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 256277
