--- a/data/cards/26096328.yaml
+++ b/data/cards/26096328.yaml
@@ -12,7 +12,7 @@ name:
   ko: 초노급포탑열차 저거너트 리베
   ko_rr: Chonogeup-potap-yeolcha Jeogeoneoteu Ribe
   zh-TW:
-  zh-CN: 超重型炮塔列车 破天巨爱
+  zh-CN: 超重型炮塔列车 爱恋倾城炮
 text:
   en: |-
     3 Level 11 monsters
@@ -40,10 +40,8 @@ text:
     "초노급포탑열차 저거너트 리베"는 1턴에 1번, 자신 필드의 랭크 10 의 기계족 엑시즈 몬스터 위에 겹치고 엑시즈 소환할 수도 있다. ①: 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하고 발동할 수 있다. 이 카드의 공격력 / 수비력은 2000 올린다. 이 효과의 발동 후, 턴 종료시까지 자신은 이 카드로밖에 공격 선언할 수 없다. ②: 이 카드는 1번의 배틀 페이즈 중에 이 카드의 엑시즈 소재의 수 ＋ 1회까지 몬스터에 공격할 수 있다.
   zh-TW:
   zh-CN: |-
-    11星怪兽×3
-    「超重型炮塔列车 破天巨爱」1回合1次也能在自己场上的10阶机械族超量怪兽上面重叠来超量召唤。
-    ①：1回合1次，把这张卡1个超量素材取除才能发动。这张卡的攻击力·守备力上升2000。这个效果的发动后，直到回合结束时自己不用这张卡不能攻击宣言。
-    ②：这张卡在同1次的战斗阶段中可以向怪兽作出最多有这张卡的超量素材数量＋1次的攻击。
+    等级11怪兽×3
+    "超重型炮塔列车 爱恋倾城炮"1回合1次，也可重叠在自己场上阶级10的机械族超量怪兽上面来超量召唤。①：1回合1次，去除此卡的1个超量素材可以发动。此卡的攻击力・守备力上升2000。此效果发动后，直至回合结束时为止，自己仅可用此卡攻击宣言。②：此卡在1次战斗阶段中，最多可攻击怪兽的次数为此卡超量素材数量＋1次。
 card_type: Monster
 monster_type_line: Machine / Xyz / Effect
 attribute: EARTH
@@ -129,4 +127,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Ultra Rare
+  zh-CN:
+  - set_number: DP21-SC044
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 yugipedia_page_id: 577962
