--- a/data/cards/68815132.yaml
+++ b/data/cards/68815132.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 댄서
   ko_rr: Haepi Daenseo
   zh-TW:
-  zh-CN: 鹰身舞者
+  zh-CN: 神鹰舞者
 text:
   en: |-
     You can target 1 WIND monster you control; return it to the hand, then you can Normal Summon 1 WIND monster. You can only use this effect of "Harpie Dancer" once per turn. This card's name becomes "Harpie Lady" while on the field or in the GY.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 자신 필드의 바람 속성 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다. 그 후, 바람 속성 몬스터 1장을 일반 소환할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1回合只能使用1次。①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。②：以自己场上1只风属性怪兽为对象才能发动。那只怪兽回到持有者手卡。那之后，可以把1只风属性怪兽召唤。
+    此卡名的②效果1回合仅可使用1次。①：此卡只要存在于场上・墓地，卡名视为"神鹰女郎"。②：以自己场上的1只风属性怪兽为对象可以发动。将该怪兽放回持有者的手牌。然后可召唤1只风属性怪兽。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -145,4 +145,9 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: DP21-SC009
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 yugipedia_page_id: 270711
