--- a/data/cards/33508719.yaml
+++ b/data/cards/33508719.yaml
@@ -347,6 +347,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 1340
