--- a/data/cards/41482598.yaml
+++ b/data/cards/41482598.yaml
@@ -103,6 +103,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 1233
