--- a/data/cards/61740673.yaml
+++ b/data/cards/61740673.yaml
@@ -194,6 +194,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 1200
