--- a/data/cards/83764718.yaml
+++ b/data/cards/83764718.yaml
@@ -983,6 +983,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 24
