--- a/data/cards/95308449.yaml
+++ b/data/cards/95308449.yaml
@@ -122,6 +122,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Unlimited
 yugipedia_page_id: 2156
