--- a/data/cards/01984618.yaml
+++ b/data/cards/01984618.yaml
@@ -97,6 +97,6 @@ sets:
     rarities:
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 738516
