--- a/data/cards/02295440.yaml
+++ b/data/cards/02295440.yaml
@@ -343,6 +343,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 41409
