--- a/data/cards/03078576.yaml
+++ b/data/cards/03078576.yaml
@@ -110,6 +110,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Forbidden
 yugipedia_page_id: 332
