--- a/data/cards/03280747.yaml
+++ b/data/cards/03280747.yaml
@@ -66,6 +66,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 2718
