--- a/data/cards/04031928.yaml
+++ b/data/cards/04031928.yaml
@@ -290,6 +290,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Forbidden
 yugipedia_page_id: 469
