--- a/data/cards/06728559.yaml
+++ b/data/cards/06728559.yaml
@@ -86,6 +86,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 705742
