--- a/data/cards/09411399.yaml
+++ b/data/cards/09411399.yaml
@@ -219,7 +219,7 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Semi-Limited
   speed: Unlimited
 yugipedia_page_id: 14402
