--- a/data/cards/15341821.yaml
+++ b/data/cards/15341821.yaml
@@ -259,6 +259,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 22336
