--- a/data/cards/17330916.yaml
+++ b/data/cards/17330916.yaml
@@ -119,6 +119,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Forbidden
 yugipedia_page_id: 432254
