--- a/data/cards/17375316.yaml
+++ b/data/cards/17375316.yaml
@@ -122,6 +122,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 159
