--- a/data/cards/18144506.yaml
+++ b/data/cards/18144506.yaml
@@ -336,6 +336,6 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 40
