--- a/data/cards/19613556.yaml
+++ b/data/cards/19613556.yaml
@@ -577,6 +577,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 590
