--- a/data/cards/20663556.yaml
+++ b/data/cards/20663556.yaml
@@ -73,6 +73,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 81850
