--- a/data/cards/23557835.yaml
+++ b/data/cards/23557835.yaml
@@ -101,6 +101,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 2851
