--- a/data/cards/24010609.yaml
+++ b/data/cards/24010609.yaml
@@ -113,6 +113,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Unlimited
 yugipedia_page_id: 552513
