--- a/data/cards/24094258.yaml
+++ b/data/cards/24094258.yaml
@@ -130,6 +130,6 @@ sets:
     - Common
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Limited
 yugipedia_page_id: 545769
