--- a/data/cards/26118970.yaml
+++ b/data/cards/26118970.yaml
@@ -100,6 +100,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Unlimited
 yugipedia_page_id: 572658
