--- a/data/cards/33396948.yaml
+++ b/data/cards/33396948.yaml
@@ -340,6 +340,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 278
