--- a/data/cards/34124316.yaml
+++ b/data/cards/34124316.yaml
@@ -185,6 +185,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 568
