--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -235,6 +235,6 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Semi-Limited
 yugipedia_page_id: 380782
