--- a/data/cards/44097050.yaml
+++ b/data/cards/44097050.yaml
@@ -115,6 +115,6 @@ sets:
     - Super Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 690897
