--- a/data/cards/44763025.yaml
+++ b/data/cards/44763025.yaml
@@ -124,6 +124,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 1167
