--- a/data/cards/44910027.yaml
+++ b/data/cards/44910027.yaml
@@ -74,6 +74,6 @@ sets:
     rarities:
     - Ultimate Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 2721
