--- a/data/cards/46411259.yaml
+++ b/data/cards/46411259.yaml
@@ -100,6 +100,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 697
