--- a/data/cards/48905153.yaml
+++ b/data/cards/48905153.yaml
@@ -132,6 +132,6 @@ sets:
     - Secret Rare
     - Ultimate Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 431209
