--- a/data/cards/52947044.yaml
+++ b/data/cards/52947044.yaml
@@ -131,6 +131,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Forbidden
 yugipedia_page_id: 584380
