--- a/data/cards/55144522.yaml
+++ b/data/cards/55144522.yaml
@@ -419,6 +419,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 37
