--- a/data/cards/64697231.yaml
+++ b/data/cards/64697231.yaml
@@ -115,6 +115,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 14555
