--- a/data/cards/68431965.yaml
+++ b/data/cards/68431965.yaml
@@ -106,6 +106,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Unlimited
 yugipedia_page_id: 553181
