--- a/data/cards/69243953.yaml
+++ b/data/cards/69243953.yaml
@@ -116,6 +116,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 1138
