--- a/data/cards/70369116.yaml
+++ b/data/cards/70369116.yaml
@@ -114,6 +114,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 673729
