--- a/data/cards/70828912.yaml
+++ b/data/cards/70828912.yaml
@@ -450,6 +450,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 34
