--- a/data/cards/72330894.yaml
+++ b/data/cards/72330894.yaml
@@ -98,6 +98,6 @@ sets:
     - Ultra Rare
     - Secret Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 690900
