--- a/data/cards/72892473.yaml
+++ b/data/cards/72892473.yaml
@@ -351,6 +351,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 80
