--- a/data/cards/78706415.yaml
+++ b/data/cards/78706415.yaml
@@ -118,6 +118,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 515
