--- a/data/cards/78872731.yaml
+++ b/data/cards/78872731.yaml
@@ -104,6 +104,6 @@ sets:
     rarities:
     - Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 435591
