--- a/data/cards/80604091.yaml
+++ b/data/cards/80604091.yaml
@@ -300,6 +300,6 @@ sets:
     rarities:
     - Ultra Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Forbidden
 yugipedia_page_id: 509639
