--- a/data/cards/81122844.yaml
+++ b/data/cards/81122844.yaml
@@ -95,6 +95,6 @@ sets:
     rarities:
     - Normal Parallel Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Forbidden
   ocg: Unlimited
 yugipedia_page_id: 179968
