--- a/data/cards/81275020.yaml
+++ b/data/cards/81275020.yaml
@@ -177,6 +177,6 @@ sets:
     rarities:
     - Common
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
 yugipedia_page_id: 354904
