--- a/data/cards/81439173.yaml
+++ b/data/cards/81439173.yaml
@@ -534,7 +534,7 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Unlimited
+  tcg: Semi-Limited
   ocg: Limited
   speed: Unlimited
 yugipedia_page_id: 5395
