--- a/data/cards/13647631.yaml
+++ b/data/cards/13647631.yaml
@@ -12,7 +12,7 @@ name:
   ko: 중기화열차 데릭크레인
   ko_rr: Jung-gihwayeolcha Derik-keurein
   zh-TW:
-  zh-CN: 重机货列车 起重货车
+  zh-CN: 重机货列车 起重吊臂
 text:
   en: |-
     If an EARTH Machine monster(s) is Normal or Special Summoned to your field (except during the Damage Step): You can Special Summon this card from your hand, but its original ATK/DEF become halved. You can only use this effect of "Heavy Freight Train Derricrane" once per turn. If this card is detached from an Xyz Monster and sent to the GY to activate that monster's effect: You can target 1 card your opponent controls; destroy it.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 기계족 / 땅 속성 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. 이 효과로 특수 소환한 이 카드의 원래의 공격력 / 수비력은 절반이 된다. ②: 엑시즈 소재의 이 카드가 엑시즈 몬스터의 효과를 발동하기 위해 제거되어 묘지로 보내졌을 경우, 상대 필드의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    「重机货列车 起重货车」的①的效果1回合只能使用1次。①：自己场上有机械族·地属性怪兽召唤·特殊召唤的场合才能发动。这张卡从手卡特殊召唤。这个效果特殊召唤的这张卡的原本的攻击力·守备力变成一半。②：XYZ素材的这张卡为让XYZ怪兽的效果发动而被取除送去墓地的场合，以对方场上1张卡为对象才能发动。那张卡破坏。
+    此卡名的①效果1回合仅可使用1次。①：机械族・地属性怪兽被召唤・特殊召唤至自己场上的情况下可以发动。从手牌将此卡特殊召唤。以此效果特殊召唤的此卡原本的攻击力・守备力变为一半。②：作为超量素材的此卡为发动超量怪兽的效果被去除并被送至墓地的情况下，以对手场上的1张卡为对象可以发动。将该卡破坏。
 card_type: Monster
 monster_type_line: Machine / Effect
 attribute: EARTH
@@ -125,6 +125,11 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: DP21-SC051
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
