--- a/data/cards/47705572.yaml
+++ b/data/cards/47705572.yaml
@@ -32,7 +32,7 @@ text:
     ①: 이 카드가 몬스터 존에 존재하는 한, 자신의 "문라이트" 몬스터가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 상대에게 전투 데미지를 준다.
   zh-TW:
   zh-CN: |-
-    ①：只要这张卡在怪兽区域存在，自己的「月光」怪兽向守备表示怪兽攻击的场合，给与对方为攻击力超过那个守备力的数值的战斗伤害。
+    ①：只要此卡存在于怪兽区域，自己的"月光"怪兽攻击了守备表示的怪兽的情况下，依攻击力超出该怪兽守备力的数值来给予对手战斗伤害。
 card_type: Monster
 monster_type_line: Beast-Warrior / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 자신은 "문라이트" 몬스터밖에 펜듈럼 소환할 수 없다. 이 효과는 무효화되지 않는다. ②: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 자신의 필드 / 묘지에서, "문라이트" 융합 몬스터 카드에 기재된 융합 소재 몬스터를 제외하고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：自己不是「月光」怪兽不能灵摆召唤。这个效果不会被无效化。②：1回合1次，自己主要阶段才能发动。从自己的场上·墓地把「月光」融合怪兽卡决定的融合素材怪兽除外，把那1只融合怪兽从额外卡组融合召唤。
+    ①：自己仅可灵摆召唤"月光"怪兽。此效果不会被无效化。②：1回合1次，在自己的主要阶段可以发动。从自己场上・墓地，将由"月光"融合怪兽卡决定的融合素材怪兽除外，从额外牌组将该1只融合怪兽融合召唤。
 series:
 - Lunalight
 sets:
@@ -96,6 +96,11 @@ sets:
   ko:
   - set_number: SHVI-KR012
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC066
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
