--- a/data/cards/48444114.yaml
+++ b/data/cards/48444114.yaml
@@ -12,7 +12,7 @@ name:
   ko: 월광향
   ko_rr: Wolgwanghyang
   zh-TW:
-  zh-CN: 月光香
+  zh-CN: 月华香
 text:
   en: |-
     Target 1 "Lunalight" monster in your GY; Special Summon it. You can banish this card from your GY, then discard 1 card; add 1 "Lunalight" monster from your Deck to your hand.
@@ -32,7 +32,7 @@ text:
     ①: 자신 묘지의 "문라이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. ②: 묘지의 이 카드를 제외하여, 패를 1장 버리고 발동할 수 있다. 덱에서 "문라이트" 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：以自己墓地1只「月光」怪兽为对象才能发动。那只怪兽特殊召唤。②：把墓地的这张卡除外，丢弃1张手卡才能发动。从卡组把1只「月光」怪兽加入手卡。
+    ①：以自己墓地的1只"月光"怪兽为对象可以发动。将该怪兽特殊召唤。②：将墓地的此卡除外，舍弃1张手牌可以发动。从牌组将1只"月光"怪兽加入手牌。
 card_type: Spell
 property: Normal
 sets:
@@ -96,6 +96,11 @@ sets:
     rarities:
     - Common
   - set_number: DP21-KR055
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC071
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
