--- a/data/cards/03629090.yaml
+++ b/data/cards/03629090.yaml
@@ -12,7 +12,7 @@ name:
   ko: 사이버 엔젤－이다텐－
   ko_rr: Saibeo Enjel - Idaten
   zh-TW:
-  zh-CN: 电子化天使-韦驮天-
+  zh-CN: 电子天使－韦驮天－
 text:
   en: |-
     You can Ritual Summon this card with "Machine Angel Ritual". If this card is Ritual Summoned: You can add 1 Ritual Spell from your Deck or GY to your hand. If this card is Tributed: You can make all Ritual Monsters you control gain 1000 ATK/DEF.
@@ -32,7 +32,7 @@ text:
     "기계천사의 의식"에 의해 의식 소환. ①: 이 카드가 의식 소환에 성공했을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 의식 마법 카드 1장을 고르고 패에 넣는다. ②: 이 카드가 릴리스되었을 경우에 발동할 수 있다. 자신 필드의 모든 의식 몬스터의 공격력 / 수비력은 1000 올린다.
   zh-TW:
   zh-CN: |-
-    效果·仪式：「机械天使的仪式」降临。①：这张卡仪式召唤成功的场合才能发动。从自己的卡组·墓地选1张仪式魔法卡加入手卡。②：这张卡被解放的场合才能发动。自己场上的全部仪式怪兽的攻击力·守备力上升1000。
+    以"机械天使的仪式"降临。①：此卡仪式召唤成功的情况下可以发动。从自己的牌组・墓地挑选1张仪式魔法卡加入手牌。②：此卡被解放的情况下可以发动。自己场上所有仪式怪兽的攻击力・守备力上升1000。
 card_type: Monster
 monster_type_line: Fairy / Ritual / Effect
 attribute: LIGHT
@@ -185,6 +185,11 @@ sets:
     rarities:
     - Common
   - set_number: DP21-KR019
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC024
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
