--- a/data/cards/yugipedia895427.yaml
+++ b/data/cards/yugipedia895427.yaml
@@ -14,7 +14,8 @@ name:
   zh-TW:
   zh-CN:
 text:
-  en:
+  en: |-
+    If this card is Normal or Special Summoned: You can target 1 Beast, Beast-Warrior, Winged Beast, Insect, or Plant monster in your GY; send 1 monster with the same original Type from your Deck to the GY. If this card in its owner's possession is destroyed by an opponent's card: You can add 1 Beast, Beast-Warrior, Winged Beast, Insect, or Plant monster from your Deck to your hand, except "Kittytale, Mystical Beast of the Forest". You can only use each effect of "Kittytale, Mystical Beast of the Forest" once per turn.
   de:
   es:
   fr:
