--- a/data/cards/95658967.yaml
+++ b/data/cards/95658967.yaml
@@ -12,7 +12,7 @@ name:
   ko: 축복의 교회－리츄얼 처치
   ko_rr: Hukpok-ui Gyuhoe - Richyueol Cheochi
   zh-TW:
-  zh-CN: 祝福的教会-仪式教堂
+  zh-CN: 祝福教会－仪式圣堂
 text:
   en: |-
     You can discard 1 Spell; add 1 LIGHT Ritual Monster or 1 Ritual Spell from your Deck to your hand. You can shuffle any number of Spells from your GY into the Deck, then target 1 LIGHT Fairy monster in your GY whose Level equals the number of cards you shuffled into the Deck; Special Summon it. You can only use each effect of "Ritual Sanctuary" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 메인 페이즈에 패에서 마법 카드 1장을 버리고 발동할 수 있다. 덱에서 빛 속성 의식 몬스터 1장 또는 의식 마법 카드 1장을 패에 넣는다. ②: 자신 묘지의 마법 카드를 임의의 수만큼 덱으로 되돌리고, 덱으로 되돌린 수와 같은 레벨을 가지는, 자신 묘지의 천사족 / 빛 속성 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「祝福的教会-仪式教堂」的①②的效果1回合各能使用1次。①：从自己手卡丢弃1张魔法卡才能把这个效果发动。从卡组把1只光属性仪式怪兽或者1张仪式魔法卡加入手卡。②：让自己墓地的魔法卡任意数量回到卡组，以持有和回到卡组的数量相同等级的自己墓地1只天使族·光属性怪兽为对象才能发动。那只怪兽特殊召唤。
+    此卡名的①②效果1回合仅可各使用1次。①：在自己的主要阶段，从手牌将1张魔法卡舍弃可以发动。从牌组将1只光属性仪式怪兽或1张仪式魔法卡加入手牌。②：将自己墓地任意数量的魔法卡放回牌组，以自己墓地1只等级与放回牌组数量相同的天使族・光属性怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Spell
 property: Field
 sets:
@@ -136,6 +136,11 @@ sets:
     rarities:
     - Rare
   - set_number: DP21-KR022
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC029
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
