--- a/data/cards/11587414.yaml
+++ b/data/cards/11587414.yaml
@@ -7,8 +7,8 @@ name:
   fr: Le Véritable Dieu du Soleil
   it: La Vera Divinità del Sole
   pt: O Verdadeiro Deus Sol
-  ja:
-  ja_romaji:
+  ja: <ruby>真<rt>しん</rt></ruby>なる<ruby>太<rt>たい</rt></ruby><ruby>陽<rt>よう</rt></ruby><ruby>神<rt>しん</rt></ruby>
+  ja_romaji: Shinnaru Taiyōshin
   ko:
   ko_rr:
   zh-TW:
@@ -58,6 +58,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP3-JP052
+    set_name: World Premiere Pack 2022
+    rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
