--- a/data/cards/59094601.yaml
+++ b/data/cards/59094601.yaml
@@ -7,8 +7,8 @@ name:
   fr: Le Dieu Céleste Ressuscité
   it: La Rinata Divinità del Cielo
   pt: O Renascido Deus Celeste
-  ja:
-  ja_romaji:
+  ja: <ruby>蘇<rt>よみがえ</rt></ruby>りし<ruby>天<rt>てん</rt></ruby><ruby>空<rt>くう</rt></ruby><ruby>神<rt>しん</rt></ruby>
+  ja_romaji: Yomigaerishi Tenkūshin
   ko:
   ko_rr:
   zh-TW:
@@ -58,6 +58,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP3-JP050
+    set_name: World Premiere Pack 2022
+    rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
