--- a/data/cards/yugipedia895221.yaml
+++ b/data/cards/yugipedia895221.yaml
@@ -28,7 +28,7 @@ text:
 card_type: Monster
 monster_type_line: Spellcaster / Effect
 attribute: LIGHT
-rank: 4
+level: 4
 atk: 1600
 def: 1400
 series:
