--- a/data/cards/53503015.yaml
+++ b/data/cards/53503015.yaml
@@ -12,7 +12,7 @@ name:
   ko: 프로즌 로어즈
   ko_rr: Peurojeun Ro-eojeu
   zh-TW:
-  zh-CN: 冷蔷薇的抱香
+  zh-CN: 冷香蔷薇之抱吼
 text:
   en: |-
     Send 1 face-up monster you control to the GY; apply this effect, depending on the Type it had on the field.
@@ -54,10 +54,9 @@ text:
     ●식물족 이외: 덱에서 레벨 4 이하의 식물족 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的卡在1回合只能发动1张。
-    ①：把自己场上1只表侧表示怪兽送去墓地才能发动。那只怪兽种族的以下效果适用。
-    ●植物族：这个回合的结束阶段，自己从卡组抽2张，那之后选1张手卡丢弃。
-    ●植物族以外：从卡组把1只4星以下的植物族怪兽加入手卡。
+    此卡名的卡1回合仅可发动1张。①：将自己场上的1只表侧表示怪兽送至墓地可以发动。根据该怪兽的种族适用以下效果。
+    ●植物族：在此回合的结束阶段，自己从牌组抽2张，然后挑选1张手牌舍弃。
+    ●植物族以外：从牌组将1只等级4以下的植物族怪兽加入手牌。
 card_type: Spell
 property: Quick-Play
 series:
@@ -118,6 +117,11 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: DP21-SC033
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
