--- a/data/cards/71607202.yaml
+++ b/data/cards/71607202.yaml
@@ -1,7 +1,7 @@
 konami_id: 17806
 password: 71607202
 name:
-  en: News Reporter from the Underworld
+  en: Muckraker From the Underworld
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Effect Monsters
-    Cannot be used as Link Material the turn it is Link Summoned. If a monster(s) you control would be destroyed by battle or card effect, you can Tribute 1 Fiend monster instead. You can target 1 Fiend monster in your GY, except "News Reporter from the Underworld"; you cannot Special Summon monsters for the rest of this turn, except Fiend monsters, also discard 1 card, and if you do, Special Summon the targeted monster. You can only use this effect of "News Reporter from the Underworld" once per turn.
+    Cannot be used as Link Material the turn it is Link Summoned. If a monster(s) you control would be destroyed by battle or card effect, you can Tribute 1 Fiend monster instead. You can target 1 Fiend monster in your GY, except "Muckraker From the Underworld"; discard 1 card, and if you do, Special Summon that monster, also you cannot Special Summon monsters for the rest of this turn, except Fiend monsters. You can only use this effect of "Muckraker From the Underworld" once per turn.
   de:
   es:
   fr:
@@ -41,6 +41,46 @@ materials: 2 Effect Monsters
 series:
 - From the Underworld
 sets:
+  en:
+  - set_number: DABL-ENSP1
+    set_name: Darkwing Blast Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: DABL-EN051
+    set_name: Darkwing Blast
+    rarities:
+  de:
+  - set_number: DABL-DESP1
+    set_name: Darkwing Blast Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: DABL-DE051
+    set_name: Darkwing Blast
+    rarities:
+  fr:
+  - set_number: DABL-FRSP1
+    set_name: Darkwing Blast Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: DABL-FR051
+    set_name: Darkwing Blast
+    rarities:
+  it:
+  - set_number: DABL-ITSP1
+    set_name: Darkwing Blast Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: DABL-IT051
+    set_name: Darkwing Blast
+    rarities:
+  pt:
+  - set_number: DABL-PTSP1
+    set_name: Darkwing Blast Premiere! promotional card
+    rarities:
+    - Ultra Rare
+  - set_number: DABL-PT051
+    set_name: Darkwing Blast
+    rarities:
   ja:
   - set_number: DABL-JP051
     set_name: Darkwing Blast
