--- a/data/cards/59820352.yaml
+++ b/data/cards/59820352.yaml
@@ -108,6 +108,11 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  pt:
+  - set_number: MP22-PT251
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: 307-044
     set_name: Invader of Darkness (set)
