--- a/data/cards/yugipedia897904.yaml
+++ b/data/cards/yugipedia897904.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can target 1 banished LIGHT or DARK monster; Special Summon it to your field, but its effects are negated, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT and DARK Synchro Monsters. If this card is sent to the GY as Synchro Material: You can target cards your opponent controls up to the number of other materials used for that Synchro Summon; banish them. You can only use each effect of "Chaos Mirage Dragon" once per turn.
+    You can target 1 banished LIGHT or DARK monster; Special Summon it to your field, but negate its effects, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT and DARK Synchro Monsters. If this card is sent to the GY as Synchro Material: You can target cards your opponent controls, up to the number of other materials used for that Synchro Summon; banish them. You can only use each effect of "Chaos Mirage Dragon" once per turn.
   de:
   es:
   fr:
