--- a/data/cards/yugipedia897900.yaml
+++ b/data/cards/yugipedia897900.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can Tribute this card; Special Summon 2 "Black Beast Tokens" (Fiend/DARK/Level 2/ATK 1000/DEF 500). If this card is banished from the hand or GY: You can Special Summon 2 "White Beast Tokens" (Fairy/Tuner/LIGHT/Level 2/ATK 500/DEF 1000). You can only use 1 of these effects of "Chaos Witch" per turn, and only once that turn. You cannot Special Summon monsters from the Extra Deck the turn you activate either of this card's effects, except LIGHT and DARK Synchro monsters.
+    You can Tribute this card; Special Summon 2 "Black Beast Tokens" (Fiend/DARK/Level 2/ATK 1000/DEF 500). If this card is banished from the hand or GY: You can Special Summon 2 "White Beast Tokens" (Fairy/Tuner/LIGHT/Level 2/ATK 500/DEF 1000). You can only use 1 "Chaos Witch" effect per turn, and only once that turn. You cannot Special Summon monsters from the Extra Deck the turn you activate either of this card's effects, except LIGHT and DARK Synchro Monsters.
   de:
   es:
   fr:
