--- a/data/cards/yugipedia897902.yaml
+++ b/data/cards/yugipedia897902.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be Normal Summoned/Set. Must be Special Summoned with a card effect. If this face-up card leaves the field, banish it. You can only use each of the following effects of "Core of Chaos" once per turn. You can banish 1 DARK monster from your hand or GY; Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT and DARK Synchro Monsters. If this card is Special Summoned: You can target 1 of your banished "Shell of Chaos"; Special Summon it.
+    Cannot be Normal Summoned/Set. Must be Special Summoned by a card effect. If this face-up card would leave the field, banish it instead. You can only use each of the following effects of "Core of Chaos" once per turn. You can banish 1 DARK monster from your hand or GY; Special Summon this card from your hand, also you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except LIGHT and DARK Synchro Monsters. If this card is Special Summoned: You can target 1 of your banished "Shell of Chaos"; Special Summon it.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Thunder / Effect
+monster_type_line: Thunder / Tuner / Effect
 attribute: LIGHT
 level: 2
 atk: 0
