--- a/data/cards/yugipedia897906.yaml
+++ b/data/cards/yugipedia897906.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 LIGHT Tuner + 1+ non-Tuner DARK monsters
-    Gains 2000 ATK during the turn a card(s) is banished. This card can attack all opponent's monsters once each, also monsters destroyed by battle with this card are banished instead of being sent to the GY. If this card in its owner's control leaves the field by their opponent: You can Special Summon 1 "Chaos" Synchro Monster from your Extra Deck, except "Chaos Archfiend". You can only use this effect of "Chaos Archfiend" once per turn.
+    Gains 2000 ATK during the turn a card(s) is banished. This card can attack all your opponent's monsters once each, also banish any monster destroyed by battle with this card. If this card in its owner's control leaves the field by an opponent's card: You can Special Summon 1 "Chaos" Synchro Monster from your Extra Deck, except "Chaos Archfiend". You can only use this effect of "Chaos Archfiend" once per turn.
   de:
   es:
   fr:
@@ -45,9 +45,12 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: PHHY-JP039
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 897906
-fake_password:
-- 101111039
