--- a/data/cards/yugipedia897907.yaml
+++ b/data/cards/yugipedia897907.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 LIGHT Tuner + 1+ non-Tuner DARK monsters
-    Gains 1000 ATK during the turn a card(s) is banished. You can only use each of the following effects of "Chaos Beast" once per turn. You can target 1 of your banished LIGHT or DARK monsters; add it to your hand. If this is in your GY, except the turn it was sent there: You can banish 1 LIGHT and 1 DARK monster from your hand and/or GY, except this card; Special Summon this card.
+    Gains 1000 ATK during the turn a card(s) is banished. You can only use each of the following effects of "Chaos Beast" once per turn. You can target 1 of your banished LIGHT or DARK monsters; add it to your hand. If this card is in your GY, except the turn it was sent there: You can banish 1 LIGHT and 1 DARK monster from your hand and/or GY, except this card; Special Summon this card.
   de:
   es:
   fr:
