--- a/data/cards/76136345.yaml
+++ b/data/cards/76136345.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드에 기계족 / 땅 속성 / 레벨 10 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 덱에서 공격력 1800 이상의 기계족 / 땅 속성 / 레벨 4 몬스터 1장을 특수 소환한다. 이 효과로 특수 소환된 몬스터의 레벨은 10 이 된다. 이 효과의 발동 후, 턴 종료시까지 상대가 받는 전투 데미지는 0 이 된다. ②: 자신의 패를 1장 묘지로 보내고 발동할 수 있다. 덱에서 기계족 / 땅 속성 / 레벨 10 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「回转调车」的①②的效果1回合只能有1次使用其中任意1个。①：自己场上有机械族·地属性·10星怪兽召唤·特殊召唤的场合才能发动。从卡组把1只攻击力1800以上的机械族·地属性·4星怪兽特殊召唤。这个效果特殊召唤的怪兽的等级变成10星。这个效果的发动后，直到回合结束时对方受到的战斗伤害变成0。②：把自己1张手卡送去墓地才能发动。从卡组把1只机械族·地属性·10星怪兽加入手卡。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：机械族・地属性・等级10怪兽被召唤・特殊召唤至自己场上的情况下可以发动。从牌组将1只攻击力1800以上的机械族・地属性・等级4怪兽特殊召唤。被以此效果特殊召唤的怪兽的等级变为10。此效果发动后，直至回合结束时为止，对手所受战斗伤害变为0。②：将自己的1张手牌送至墓地可以发动。从牌组将1只机械族・地属性・等级10怪兽加入手牌。
 card_type: Spell
 property: Field
 series:
@@ -119,6 +119,11 @@ sets:
     - Rare
   - set_number: LVP2-KR055
     set_name: LINK VRAINS Pack 2
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC057
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
