--- a/data/cards/11587414.yaml
+++ b/data/cards/11587414.yaml
@@ -62,6 +62,8 @@ sets:
   - set_number: WPP3-JP052
     set_name: World Premiere Pack 2022
     rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
