--- a/data/cards/49064413.yaml
+++ b/data/cards/49064413.yaml
@@ -8,7 +8,7 @@ name:
   it: La Bestia Mascherata
   pt: Demônio Mascarado
   ja: <ruby>仮<rt>か</rt></ruby><ruby>面<rt>めん</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>マスクド・ヘルレイザー
-  ja_romaji: Kamen Majū Masukudo Herureizā
+  ja_romaji: Kamenmajū Masukudo Herureizā
   ko: 가면마수 헬레이저
   ko_rr:
   zh-TW:
