--- a/data/cards/94377247.yaml
+++ b/data/cards/94377247.yaml
@@ -8,7 +8,7 @@ name:
   it: Maledizione della Bestia Mascherata
   pt: A Maldição do Demônio Mascarado
   ja: <ruby>仮<rt>か</rt></ruby><ruby>面<rt>めん</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>獣<rt>じゅう</rt></ruby>の<ruby>儀<rt>ぎ</rt></ruby><ruby>式<rt>しき</rt></ruby>
-  ja_romaji: Kamen Majū no Gishiki
+  ja_romaji: Kamenmajū no Gishiki
   ko: 가면마수의 의식
   ko_rr:
   zh-TW:
