--- a/data/cards/82693042.yaml
+++ b/data/cards/82693042.yaml
@@ -8,7 +8,7 @@ name:
   it: Sfera del Chaos
   pt: Esfera do Caos
   ja: <ruby>混沌球体<rt>スフィア・オブ・カオス</rt></ruby>
-  ja_romaji: Sufia obu Kaosu
+  ja_romaji: Sufia Obu Kaosu
   ko: 혼돈구체
   ko_rr:
   zh-TW:
