--- a/data/cards/10925955.yaml
+++ b/data/cards/10925955.yaml
@@ -44,6 +44,8 @@ text:
     自己场上有水属性怪兽表侧表示存在的场合，从以下效果选择1个发动。自己场上有水属性的仪式怪兽表侧表示存在的场合，可以选择两方发动。●把对方的魔法与陷阱卡区域盖放的卡全部确认再回到原状。●从自己或者对方的卡组上面把2张卡确认，用喜欢的顺序回到卡组上面。
 card_type: Spell
 property: Normal
+series:
+- Aquamirror
 sets:
   en:
   - set_number: EXVC-EN059
