--- a/data/cards/46337945.yaml
+++ b/data/cards/46337945.yaml
@@ -34,6 +34,8 @@ text:
     把手卡1张仪式魔法卡给对方观看，选择自己墓地2只名字带有「遗式」的怪兽才能发动。选择的墓地的怪兽回到手卡。
 card_type: Trap
 property: Normal
+series:
+- Aquamirror
 sets:
   en:
   - set_number: HA05-EN058
