--- a/data/cards/64437633.yaml
+++ b/data/cards/64437633.yaml
@@ -34,6 +34,8 @@ text:
     从手卡把1只名字带有「遗式」的仪式怪兽特殊召唤。这个效果特殊召唤的仪式怪兽不能攻击，结束阶段时回到持有者手卡。
 card_type: Trap
 property: Normal
+series:
+- Aquamirror
 sets:
   en:
   - set_number: HA06-EN059
