--- a/data/cards/yugipedia897903.yaml
+++ b/data/cards/yugipedia897903.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     You can activate 1 of these effects. You can only use this effect of "Mind Tuner" once per turn.
-    ● Banish 1 LIGHT and/or 1 DARK monster from your hand and/or GY; increase or decrease this card's Level by the number banished, until the end of this turn.
+    ● Banish up to 2 monsters from your hand and/or GY (1 LIGHT and 1 DARK); increase or decrease this card's Level by the number banished, until the end of this turn.
     ● Target up to 2 of your banished monsters (1 LIGHT and 1 DARK); return them to the GY, and if you do, increase or decrease this card's Level by the number returned, until the end of this turn.
   de:
   es:
