--- a/data/cards/83190280.yaml
+++ b/data/cards/83190280.yaml
@@ -32,7 +32,7 @@ text:
     "문라이트 타이거"의 몬스터 효과는 1턴에 1번밖에 사용할 수 없다. ①: 필드의 이 카드가 전투 / 효과로 파괴되었을 경우, 자신 묘지의 "문라이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    「月光虎」的怪兽效果1回合只能使用1次。①：场上的这张卡被战斗·效果破坏的场合，以自己墓地1只「月光」怪兽为对象才能发动。那只怪兽特殊召唤。
+    此卡名的怪兽效果1回合仅可使用1次。①：场上的此卡因战斗・效果被破坏的情况下，以自己墓地的1只"月光"怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Beast-Warrior / Pendulum / Effect
 attribute: LIGHT
@@ -59,7 +59,7 @@ pendulum_effect:
     ①: 1턴에 1번, 자신 묘지의 "문라이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다. 이 효과로 특수 소환한 몬스터는 공격할 수 없으며, 효과는 무효화되고, 엔드 페이즈에 파괴된다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，以自己墓地1只「月光」怪兽为对象才能发动。那只怪兽特殊召唤。这个效果特殊召唤的怪兽不能攻击，效果无效化，结束阶段破坏。
+    ①：1回合1次，以自己墓地的1只"月光"怪兽为对象可以发动。将该怪兽特殊召唤。以此效果特殊召唤的怪兽不可攻击，效果无效化，将在结束阶段被破坏。
 series:
 - Lunalight
 sets:
@@ -96,6 +96,11 @@ sets:
   ko:
   - set_number: SHVI-KR013
     set_name: Shining Victories
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC067
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
