--- a/data/cards/yugipedia897993.yaml
+++ b/data/cards/yugipedia897993.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card can be used to Ritual Summon any "Gishki" Ritual Monster. You must also Tribute either 1 face-up monster your opponent controls, OR monsters from your hand or field whose total Levels exactly equal its Level. If you do, you lose LP equal to the Summoned monster's original ATK. If this card is in your GY: You can target 1 "Gishki" monster in your GY; place it on the top of the Deck, and if you do, place this card on the bottom of the Deck.
+    This card can be used to Ritual Summon any "Gishki" Ritual Monster. You must also Tribute either 1 face-up monster your opponent controls, OR monsters from your hand or field whose total Levels exactly equal the Level of the Ritual Monster you Ritual Summon. If you do, you lose LP equal to the Summoned monster's original ATK. If this card is in your GY: You can target 1 "Gishki" monster in your GY; place it on top of the Deck, and if you do, place this card on the bottom of the Deck.
   de:
   es:
   fr:
