--- a/data/cards/yugipedia897994.yaml
+++ b/data/cards/yugipedia897994.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Add 1 "Gishki" monster from your Deck to your hand. During the End Phase, if you control a WATER Ritual Monster: You can banish this card from your GY; Set 1 "Aquamirror" Spell/Trap from your Deck or GY, except "Aquamirror Focalization".
+    Add 1 "Gishki" monster from your Deck to your hand. During the End Phase, if you control a WATER Ritual Monster: You can banish this card from your GY; Set 1 "Aquamirror" Spell/Trap from your Deck or GY, except "Aquamirror Focalization". You can only use this effect of "Aquamirror Focalization" once per turn.
   de:
   es:
   fr:
