--- a/data/cards/yugipedia897991.yaml
+++ b/data/cards/yugipedia897991.yaml
@@ -42,9 +42,12 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: PHHY-JP032
+    set_name: Photon Hypernova +1 Bonus Pack
+    rarities:
+    - Ultra Rare
+    - Prismatic Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 897991
-fake_password:
-- 101111032
