--- a/data/cards/57946551.yaml
+++ b/data/cards/57946551.yaml
@@ -7,8 +7,8 @@ name:
   fr: Écailles de Pierre
   it: Scaglie Roccia
   pt: Escamas Rochosas
-  ja:
-  ja_romaji:
+  ja: ロック・スケイル
+  ja_romaji: Rokku Sukeiru
   ko:
   ko_rr:
   zh-TW:
@@ -61,6 +61,11 @@ sets:
   pt:
   - set_number: BACH-PT083
     set_name: Battle of Chaos
+    rarities:
+    - Common
+  ja:
+  - set_number: WPP3-JP030
+    set_name: World Premiere Pack 2022
     rarities:
     - Common
 limit_regulation:
