--- a/data/cards/83340560.yaml
+++ b/data/cards/83340560.yaml
@@ -7,8 +7,8 @@ name:
   fr: Le Grand Double Casting de Lanceurs
   it: Il Grande Doppio Cast Lanciatore
   pt: O Elenco Duplo do Grande Conjurador
-  ja:
-  ja_romaji:
+  ja: <ruby>偉<rt>い</rt></ruby><ruby>大<rt>だい</rt></ruby>なるダブルキャスター
+  ja_romaji: Idainaru Daburu Kyasutā
   ko:
   ko_rr:
   zh-TW:
@@ -69,6 +69,11 @@ sets:
   pt:
   - set_number: BACH-PT084
     set_name: Battle of Chaos
+    rarities:
+    - Common
+  ja:
+  - set_number: WPP3-JP037
+    set_name: World Premiere Pack 2022
     rarities:
     - Common
 limit_regulation:
