--- a/data/cards/35618217.yaml
+++ b/data/cards/35618217.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 1턴에 1번, 덱 / 엑스트라 덱에서 "문라이트" 몬스터 1장을 묘지로 보내고 발동할 수 있다. 이 턴에, 이 카드를 융합 소재로 할 경우, 묘지로 보낸 그 몬스터의 같은 이름의 카드로서 융합 소재로 할 수 있다. ②: 이 카드가 효과로 묘지로 보내졌을 경우, 자신 묘지의 "융합" 1장을 대상으로 하고 발동할 수 있다. 그 카드를 패에 넣는다. ③: 이 카드가 제외되었을 경우에 발동할 수 있다. 이 턴에, 상대는 배틀 페이즈 중에 효과를 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    「月光彩雏」的②的效果1回合只能使用1次。①：1回合1次，从卡组·额外卡组把1只「月光」怪兽送去墓地才能发动。这个回合，把这张卡作为融合素材的场合，可以作为送去墓地的那只怪兽的同名卡来成为融合素材。②：这张卡被效果送去墓地的场合，以自己墓地1张「融合」为对象才能发动。那张卡加入手卡。③：这张卡被除外的场合才能发动。这个回合，对方在战斗阶段中不能把效果发动。
+    此卡名的②效果1回合仅可使用1次。①：1回合1次，从牌组・额外牌组将1只"月光"怪兽送至墓地可以发动。此回合，要将此卡作为融合素材的情况下，此卡可视为与被送至墓地的该怪兽的同名卡。②：此卡因效果被送至墓地的情况下，以自己墓地的1张"融合"为对象可以发动。将该卡加入手牌。③：此卡被除外的情况下可以发动。此回合，对手在战斗阶段中不可发动效果。
 card_type: Monster
 monster_type_line: Beast-Warrior / Effect
 attribute: DARK
@@ -142,6 +142,11 @@ sets:
     rarities:
     - Ultra Parallel Rare
   - set_number: DP21-KR051
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC064
     set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
