--- a/data/cards/56790702.yaml
+++ b/data/cards/56790702.yaml
@@ -7,8 +7,8 @@ name:
   fr: Transporteur d'Assaut D.D.
   it: Portaerei d'Assalto D.D.
   pt: Porta-aviões de Assalto D.D.
-  ja:
-  ja_romaji:
+  ja: <ruby>異<rt>い</rt></ruby><ruby>次<rt>じ</rt></ruby><ruby>元<rt>げん</rt></ruby>の<ruby>強<rt>きょう</rt></ruby><ruby>襲<rt>しゅう</rt></ruby><ruby>艦<rt>かん</rt></ruby>
+  ja_romaji: Ijigen no Kyōshūkan
   ko:
   ko_rr:
   zh-TW:
@@ -86,6 +86,11 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Ultra Rare
+  ja:
+  - set_number: WPP3-JP029
+    set_name: World Premiere Pack 2022
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
