--- a/data/cards/64437633.yaml
+++ b/data/cards/64437633.yaml
@@ -8,7 +8,7 @@ name:
   it: Illusione Acquaspecchio
   pt:
   ja: <ruby>儀<rt>ぎ</rt></ruby><ruby>水<rt>すい</rt></ruby><ruby>鏡<rt>きょう</rt></ruby>の<ruby>幻<rt>げん</rt></ruby><ruby>影<rt>えい</rt></ruby><ruby>術<rt>じゅつ</rt></ruby>
-  ja_romaji: Gisuikyō no Gen'ei Jutsu
+  ja_romaji: Gisuikyō no Gen'eijutsu
   ko: 의수경의 환영술
   ko_rr:
   zh-TW:
