--- a/data/cards/yugipedia897992.yaml
+++ b/data/cards/yugipedia897992.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Grim Gishki
+  en: Gishki Grim
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire requirement. If this card is Normal or Special Summoned: You can Special Summon 1 "Gishki" monster from your Deck, except "Grim Gishki", also you cannot declare attacks for the rest of this turn, except with Ritual Monsters. You can only use this effect of "Grim Gishki" once per turn.
+    If you Ritual Summon exactly 1 WATER Ritual Monster with a card effect that requires use of monsters, this card can be used as the entire requirement. If this card is Normal or Special Summoned: You can Special Summon 1 "Gishki" monster from your Deck, except "Gishki Grim", also you cannot declare attacks for the rest of this turn, except with Ritual Monsters. You can only use this effect of "Gishki Grim" once per turn.
   de:
   es:
   fr:
