--- a/data/cards/08124921.yaml
+++ b/data/cards/08124921.yaml
@@ -256,6 +256,10 @@ sets:
     set_name: Millennium Box Gold Edition
     rarities:
     - Millennium Rare
+  - set_number: WPP3-JPS04
+    set_name: World Premiere Pack 2022
+    rarities:
+    - Prismatic Secret Rare
   ko:
   - set_number: LOB-K120
     set_name: Legend of Blue Eyes White Dragon
