--- a/data/cards/53325667.yaml
+++ b/data/cards/53325667.yaml
@@ -40,10 +40,8 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 특수 소환에 성공했을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 "블랙 가든" 1장을 골라 패에 넣는다. ②: 묘지의 이 카드를 제외하고, 자신 묘지의, "로즈 드래곤" 몬스터 또는 드래곤족 싱크로 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    调整＋调整以外的怪兽1只以上
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：这张卡特殊召唤成功的场合才能发动。从自己的卡组·墓地选1张「黑色花园」加入手卡。
-    ②：把墓地的这张卡除外，以自己墓地1只「蔷薇龙」怪兽或者龙族同调怪兽为对象才能发动。那只怪兽特殊召唤。
+    协调＋1只以上协调以外的怪兽
+    此卡名的①②效果1回合仅可各使用1次。①：此卡特殊召唤成功的情况下可以发动。从自己的牌组・墓地挑选1张"黑花园"加入手牌。②：将墓地的此卡除外，以自己墓地的1只"蔷薇龙"怪兽或龙族同步怪兽为对象可以发动。将该怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Plant / Synchro / Effect
 attribute: DARK
@@ -117,6 +115,11 @@ sets:
     set_name: Advanced Event Pack 2021 Vol.1 Version 2
     rarities:
     - Common
+  zh-CN:
+  - set_number: DP21-SC030
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
